--- a/assets/sass/layouts/posts.scss
+++ b/assets/sass/layouts/posts.scss
@@ -77,7 +77,10 @@
     .post-tags {
       text-align: left;
       margin-bottom: 12px;
-
+      
+      @include respond-to(handhelds) {
+        padding: 0px 18px;
+      }
 
       i {
         color: #b9b9b9;
@@ -119,6 +122,7 @@
     }    
   }
 
+
   .blog-title {
       text-align: center;
       margin-bottom: 24px;
@@ -143,14 +147,11 @@
   grid-template-columns: 1fr 3fr;
   padding: 8px 0px;
 
-  .post-tags {
-    text-align: left;
-    margin-bottom: 12px;
-    padding: 0px 18px;
-  }
+  
 
   .left {
     grid-column: 1 / 2;
+
 
     .avatar {
       display: block;
